Implement Midwest 214 shipment status flow
